# site

./: main.py  pyproject.toml  requirements.txt
models/: models.py
static/: styles.css  styles.css.map  styles.scss
templates/: base.html  dashboard.html  index.html
